# bact-trace

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  translate_engine.py
bact-trace-ai/: pyproject.toml
bact-trace-ai/app/: main.py
bact-trace-core/: HELP.md  pom.xml
bact-trace-core/src/main/java/com/bact_trace/core/: CoreApplication.java
bact-trace-core/src/main/java/com/bact_trace/core/controller/: CaseController.java
bact-trace-core/src/main/java/com/bact_trace/core/model/: PatientCase.java
bact-trace-core/src/main/java/com/bact_trace/core/repository/: CaseRepository.java
bact-trace-core/src/main/resources/: application.properties
bact-trace-core/src/test/java/com/bact_trace/core/: CoreApplicationTests.java
bact-trace-mobile/: app.json  package-lock.json  package.json
bact-trace-mobile/app/(tabs)/: index.tsx
bact-trace-web/: index.html  package-lock.json  package.json
bact-trace-web/src/: App.tsx  DoctorView.tsx  GovernmentDashboard.tsx  LandingPage.tsx  i18n.js  locales.json
